{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 137,
  "lineage": "59eec2e6-ee79-2366-d616-3e4b64c22b13",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:266735819819:loadbalancer/my-load-balancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-131710941.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-load-balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-load-balancer",
            "security_groups": [
              "sg-067b7122030042d82"
            ],
            "source_security_group": "266735819819/default",
            "source_security_group_id": "sg-067b7122030042d82",
            "subnets": [
              "subnet-04b208471fe20e5fd",
              "subnet-061f1c1df331710fa"
            ],
            "tags": {
              "Name": "Y-R-LoadBalancer"
            },
            "tags_all": {
              "Name": "Y-R-LoadBalancer"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.this",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_node_group_role",
            "module.iam.aws_iam_role_policy_attachment.ecr_read_only",
            "module.iam.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.iam.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route.private_nat_route",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_subnet",
            "module.vpc.aws_route_table_association.public_subnet",
            "module.vpc.aws_security_group.app_security_group",
            "module.vpc.aws_security_group.eks_node_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:security-group/sg-06c47aa95ec54c04b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c47aa95ec54c04b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03edc784b782e118d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_prefix20241009172752911000000008",
            "name_prefix": "db_prefix",
            "owner_id": "266735819819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06071c5004c1ce670",
            "arn": "arn:aws:ec2:us-east-1:266735819819:elastic-ip/eipalloc-06071c5004c1ce670",
            "association_id": "eipassoc-0e3d15c86eb08b716",
            "domain": "vpc",
            "id": "eipalloc-06071c5004c1ce670",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04d7f801484abdc19",
            "private_dns": "ip-10-0-0-245.ec2.internal",
            "private_ip": "10.0.0.245",
            "public_dns": "ec2-52-22-226-244.compute-1.amazonaws.com",
            "public_ip": "52.22.226.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Y\u0026R NAT EIP"
            },
            "tags_all": {
              "Name": "Y\u0026R NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:internet-gateway/igw-09260c0c330e674a4",
            "id": "igw-09260c0c330e674a4",
            "owner_id": "266735819819",
            "tags": {
              "Name": "Y\u0026R IGW"
            },
            "tags_all": {
              "Name": "Y\u0026R IGW"
            },
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06071c5004c1ce670",
            "association_id": "eipassoc-0e3d15c86eb08b716",
            "connectivity_type": "public",
            "id": "nat-06100ec2e947711cf",
            "network_interface_id": "eni-04d7f801484abdc19",
            "private_ip": "10.0.0.245",
            "public_ip": "52.22.226.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-061f1c1df331710fa",
            "tags": {
              "Name": "Y\u0026R NAT Gateway"
            },
            "tags_all": {
              "Name": "Y\u0026R NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f9636b5c485d4401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06100ec2e947711cf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f9636b5c485d440",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:route-table/rtb-00f9636b5c485d440",
            "id": "rtb-00f9636b5c485d440",
            "owner_id": "266735819819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06100ec2e947711cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Y\u0026R Private Route Table"
            },
            "tags_all": {
              "Name": "Y\u0026R Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:route-table/rtb-0be41d9a72d05ea89",
            "id": "rtb-0be41d9a72d05ea89",
            "owner_id": "266735819819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09260c0c330e674a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Y\u0026R Public Route Table"
            },
            "tags_all": {
              "Name": "Y\u0026R Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb2f3c1a5f23cd6",
            "route_table_id": "rtb-00f9636b5c485d440",
            "subnet_id": "subnet-0ca00562689cc2917"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a76b18314fbc98c0",
            "route_table_id": "rtb-00f9636b5c485d440",
            "subnet_id": "subnet-0ecddd2da924aca87"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c370ff4db82ae09",
            "route_table_id": "rtb-0be41d9a72d05ea89",
            "subnet_id": "subnet-061f1c1df331710fa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da869c910fe629a0",
            "route_table_id": "rtb-0be41d9a72d05ea89",
            "subnet_id": "subnet-04b208471fe20e5fd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:security-group/sg-037c25ab2eff43209",
            "description": "Security group for the application running on port 8000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c25ab2eff43209",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "266735819819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Y\u0026R Application Security Group"
            },
            "tags_all": {
              "Name": "Y\u0026R Application Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:security-group/sg-03edc784b782e118d",
            "description": "EKS worker node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03edc784b782e118d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eks-cluster-eks-node-sg",
            "name_prefix": "",
            "owner_id": "266735819819",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Y\u0026R-EKS-Node-SG"
            },
            "tags_all": {
              "Name": "Y\u0026R-EKS-Node-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:subnet/subnet-0ca00562689cc2917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca00562689cc2917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735819819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y\u0026R Private Subnet 1"
            },
            "tags_all": {
              "Name": "Y\u0026R Private Subnet 1"
            },
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:subnet/subnet-0ecddd2da924aca87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecddd2da924aca87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735819819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y\u0026R Private Subnet 2"
            },
            "tags_all": {
              "Name": "Y\u0026R Private Subnet 2"
            },
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:subnet/subnet-061f1c1df331710fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061f1c1df331710fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735819819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y\u0026R Public Subnet 1"
            },
            "tags_all": {
              "Name": "Y\u0026R Public Subnet 1"
            },
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:subnet/subnet-04b208471fe20e5fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b208471fe20e5fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "266735819819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Y\u0026R Public Subnet 2"
            },
            "tags_all": {
              "Name": "Y\u0026R Public Subnet 2"
            },
            "vpc_id": "vpc-0a5c5c897069901ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:266735819819:vpc/vpc-0a5c5c897069901ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071bb3bb726632868",
            "default_route_table_id": "rtb-0cf85f2405c0633b2",
            "default_security_group_id": "sg-067b7122030042d82",
            "dhcp_options_id": "dopt-0cc7c285b90edddf3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5c5c897069901ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf85f2405c0633b2",
            "owner_id": "266735819819",
            "tags": {
              "Name": "Y\u0026R VPC"
            },
            "tags_all": {
              "Name": "Y\u0026R VPC"
            }
          }
        }
      ]
    }
  ]
}